version/0.32/_sources/api/solver/_autosummary/settings/electric_conductivity.rst.txt
:orphan:

.. _electric_conductivity:

electric_conductivity
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.electric_conductivity
    :show-inheritance:

.. rubric:: Attributes

====================================================   ===============================================

Attribute                                                                                      Summary

====================================================   ===============================================
:ref:`option <option_38>`                                                    Material property method.

:ref:`value <value_16>`                                         Constant or expression property value.

:ref:`piecewise_linear <piecewise_linear_1>`                         Property piecewise-linear values.

:ref:`piecewise_polynomial <piecewise_polynomial>`         Property piecewise-polynomial coefficients.

:ref:`polynomial <polynomial_2>`                                     Property polynomial coefficients.

:ref:`user_defined_function <user_defined_function>`                   User-defined property function.

====================================================   ===============================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`fluid_child <fluid_child>`                                              'child_object_type' of fluid.

:ref:`mixture_child <mixture_child>`                                        'child_object_type' of mixture.

:ref:`volumetric_species_child <volumetric_species_child>`       'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                 'child_object_type' of material.

:ref:`inert_particle_child <inert_particle_child>`                   'child_object_type' of inert_particle.

:ref:`droplet_particle_child <droplet_particle_child>`             'child_object_type' of droplet_particle.

:ref:`particle_species_child <particle_species_child>`             'child_object_type' of particle_species.

:ref:`material_4_child <material_4_child>`                                 'child_object_type' of material.

==========================================================   ==============================================

